--- a/style.css
+++ b/style.css
@@ -1,60 +1,129 @@
-
-
-.banner-container{
-    background-color: #C9C8CA;
+body{
+  background: linear-gradient(0deg,#01BBBD,#02AFFF);
+  
 }
-
 .container-color{
-    background: linear-gradient(0deg,#01BBBD,rgb(1, 174, 255));
-}
-#navbar-brand{
-    height: 50px;
-    width: 120px;
-}
-.nav-color{
-    background-color: #00C8FE;
-}
-.about-container{
-    background-color:#00DEE2;
-}
-.education-container{
-  background-color: #26EDB7;
-}
 
-.red-type{
-    background-color: #FB8580;
+  background:linear-gradient(0deg,#01BBBD,#02AFFF);
 }
-.red-type-color{
-    color:yellow ;
+#My-pic-header{
+  margin: 10px 10px 5px 10px;
+}
+#navbar-logo{
+  height: 50px;
+  width: 120px;
 }
 .circle{
-    background-color: #FB8580;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+  background-color: #A63067;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
-.project-container{
-    background-color: #A2F78B;
+.circle:hover{
+  background-color: #c7005d;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+#icon{
+  color: white;
+  font-size: 50px;
+}
+.container-end{
+  border-spacing: 10px;
+}
+.shadow-lg{
+  box-shadow: 10px 10px 20px black !important;
+}
+.form-space{
+  margin: 20px 10px 20px 10px;
+}
+.form-color{
+  background-color: cadetblue;
+}
+.shadow-lg-footer{
+  box-shadow: 10px -6px 40px black !important;
+}
+.button-color{
+  background-color: #845EC2;
+  box-shadow: 10px 10px 20px black;
+}
+.button-color:hover{
+  background-color: #a974ff;
+  box-shadow: 10px 10px 30px black;
+}
+.hov-shed:hover{
+  box-shadow: 10px 10px 20px black !important;
 }
 
-.form-container{
-    background-color: #3A3E4D;
+.port-hov{
+  box-shadow: 10px 10px 20px rgb(0, 0, 0) !important;
+}
+.port-hov:hover{
+  box-shadow: 10px 10px 30px rgb(0, 0, 0) !important;
 }
 .inner-form{
-    background-color: #51586E;
+  background-color: #424242;
 }
-.footer{
-    background-color: #1A82B3;
+#facebook{
+  font-size: 50px;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 10px 10px 10px ;
 }
-.circle{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: inline;
-    background-color: white;
-    font-size: 40px;
-    text-align: center;
+#facebook:hover{
+  font-size: 50px;
+  color: #3b5998;
+  text-align: center;
+  padding: 10px 10px 10px 10px 
+
+  width:150px;height:150px;
+  
+  background-color: #eed;
+  box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -moz-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -webkit-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -o-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  border-radius:100px;
 }
-.round{
- border-radius: 100px;
+#github{
+  font-size: 50px;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 10px 10px 10px ;
 }
+#github:hover{
+  font-size: 50px;
+  color: #000000;
+  text-align: center;
+  padding: 10px 10px 10px 10px
+
+  width:150px;height:150px;
+  
+  background-color: #eed;
+  box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -moz-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -webkit-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -o-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  border-radius:100px;
+}
+#mail{
+  font-size: 50px;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 10px 10px 10px ;
+}
+#mail:hover{
+  font-size: 50px;
+  color: #850000;
+  text-align: center;
+  padding: 10px 10px 10px 10px 
+
+  width:150px;height:150px;
+  
+  background-color: #eed;
+  box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -moz-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -webkit-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  -o-box-shadow: 10px -10px  rgba(0,0,0,0.6);
+  border-radius:100px;
